corrected overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@
 html {
   font-family: "OpenSans", sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
